--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
+    "node-gyp": "^7.1.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
     "slugify": "^1.3.4",
